General:
  - Air Raider can equip anything in all three of his slots.
  - All weapons have an equal chance of being dropped.
  - Offline mode uses the online mission list.

Weapons Changes:
RANGER
  - All AF-ST models get a slight zoom and 40% larger clip capacity.
  - Burst-fire gimmick removed from Fusion Blasters.
  - All Nova Busters can reload in the background over the course of 1-2 minutes.
  - All shotguns (including PX50 Bound Shot) get reload time reduced by 25%.
  - Lysander Z's rate of fire increased to 0.5/s from 0.3/s.
  - Damage on all missile launchers increased 50%.
  - Prominence M2 and M3 has damage and lockon time split over 2 and 3 missiles, respectively.
  - Leniency and lockon hold time increased for Prominence M2 and M3
  - Stampede models inherently aim up a bit to make it easier to aim.
  - Recoil animation removed from PX50 Bound Shot.

WING DIVER
  - All LAZR models penetrates through enemies (including LARG-V).
  - Redued spread on all Thunder Bows by 30%.
  - Momentum inheritance reduced to 1/5 for all particle cannons.
  - Energy cost reduced by 25% all particle cannons.
  - All LRSL models penetrates through enemies (including SIG Sniper).
  - Rate of fire on Monster and Monster-S reduced from 60/s to 20/s.
  - Damage increased 50% for all homing weapons.
  - Energy cost reduced by 25% for all homing weapons.
  - Plasma Grenade Σ costs no energy.
  - Ghost Chaser's projectiles live twice as long.
  - Special weapons energy cost reduced by 50%.

FENCER
  - Vibro Roller is considerably faster in most aspects.
  - Flashing Spear has a 50% increased range.
  - Spine Driver has a 20% increased range.
  - Reduced spread Dexter Automatic Shotguns by 30%.
  - Reduced spread Cannon Shot by 15%.
  - Damage increased by 50% for all Mortars
  - Mortars inherently aim up a bit to make aiming more natural.
  - Light Mortars get jump boosters equipped instead of zoom.
  - Added dash booster to Arm Hound.