@@ -1,0 +1,156 @@
+{
+  "CONFIG.SGO": {
+    "patch": {
+      "SoldierInit.[3].[4].[0].[2]": {
+        "type": "ptr",
+        "value": [
+          {
+            "type": "int",
+            "value": 20
+          },
+          {
+            "type": "int",
+            "value": 21
+          },
+          {
+            "type": "int",
+            "value": 22
+          },
+          {
+            "type": "int",
+            "value": 23
+          },
+          {
+            "type": "int",
+            "value": 24
+          },
+          {
+            "type": "int",
+            "value": 25
+          },
+          {
+            "type": "int",
+            "value": 26
+          }
+        ]
+      },
+      "SoldierInit.[3].[4].[1].[2]": {
+        "type": "ptr",
+        "value": [
+          {
+            "type": "int",
+            "value": 20
+          },
+          {
+            "type": "int",
+            "value": 21
+          },
+          {
+            "type": "int",
+            "value": 22
+          },
+          {
+            "type": "int",
+            "value": 23
+          },
+          {
+            "type": "int",
+            "value": 24
+          },
+          {
+            "type": "int",
+            "value": 25
+          },
+          {
+            "type": "int",
+            "value": 26
+          }
+        ]
+      },
+      "SoldierInit.[3].[4].[2].[2]": {
+        "type": "ptr",
+        "value": [
+          {
+            "type": "int",
+            "value": 20
+          },
+          {
+            "type": "int",
+            "value": 21
+          },
+          {
+            "type": "int",
+            "value": 22
+          },
+          {
+            "type": "int",
+            "value": 23
+          },
+          {
+            "type": "int",
+            "value": 24
+          },
+          {
+            "type": "int",
+            "value": 25
+          },
+          {
+            "type": "int",
+            "value": 26
+          }
+        ]
+      },
+      "SoldierInit.[3].[4].[3].[2]": {
+        "type": "ptr",
+        "value": [
+          {
+            "type": "int",
+            "value": 20
+          },
+          {
+            "type": "int",
+            "value": 21
+          },
+          {
+            "type": "int",
+            "value": 22
+          },
+          {
+            "type": "int",
+            "value": 23
+          },
+          {
+            "type": "int",
+            "value": 24
+          },
+          {
+            "type": "int",
+            "value": 25
+          },
+          {
+            "type": "int",
+            "value": 26
+          }
+        ]
+      },
+      "SoldierWeaponCategory.[26]": {
+        "type": "ptr",
+        "value": [
+          {
+            "type": "string",
+            "value": "Weapon_Heavy_Special"
+          }
+        ]
+      }
+    }
+  },
+  "TEXTTABLE_STEAM_EN.TXT_SGO": {
+    "upsert": {
+      "Weapon_Vehicle": {
+        "name": "Weapon_Heavy_Special",
+        "type": "string",
+        "value": "Special Weapons"
+      }
+    }
+  }
+}
