@@ -1,5 +1,6 @@
 General:
   - Air Raider can equip anything in all three of his slots.
+  - Special Weapon category added to Fencer.
   - All weapons have an equal chance of being dropped.
   - Offline mode uses the online mission list.
 
@@ -41,7 +42,6 @@ FENCER
   - Added dash booster to Arm Hound.
   - Blast Radius on Arcane 6-Barrel increased by 60%.
   - Added jump booster to High Altitude Impact Missiles.
-  - Phoenix is able to lock on without guidance.
 
 AIR RAIDER
   - All support posts will reload in the background. (Not Life Vendor or guns.)
@@ -100,6 +100,10 @@ FENCER
   - Screen Shield | Shield
   - Rapid Powerdyne | Artilery
   - Maximum Powerdyne | Artillery
+  - Personal Guide Kit | Special
+  - Personal Guide Kit M2 | Special
+  - Personal Guide Kit M3 | Special
+  - Focus Pointer | Special
 
 AIR RAIDER
   - Napalm Plan A | Calling for Support
